force-app/main/default/src/objects/Loop__DDP_Text_Group__c/Loop__DDP_Text_Group__c.object-meta.xml
<CustomObject>
    <label>Connected Component Group</label>
    <nameField>
        <displayFormat>CCG-{000000}</displayFormat>
        <label>Connected Component Group Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Connected Component Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>