force-app/main/default/src/objects/Loop__DDP_Text_Group__c/fields/Loop__Field_Tag__c.field-meta.xml
<CustomField>
    <fullName>Loop__Field_Tag__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Original Component Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>