force-app/main/default/src/objects/Loop__DDP_Text_Group__c/fields/Loop__Filter__c.field-meta.xml
<CustomField>
    <fullName>Loop__Filter__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>