force-app/main/default/src/objects/Loop__DDP_Text_Group__c/fields/Loop__Text_Group__c.field-meta.xml
<CustomField>
    <fullName>Loop__Text_Group__c</fullName>
    <label>Component Group</label>
    <referenceTo>Loop__Text_Group__c</referenceTo>
    <relationshipLabel>DocGen Packages</relationshipLabel>
    <relationshipName>DDP_Text_Groups</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>